[gd_scene load_steps=23 format=2]

[ext_resource path="res://entites/PlayerTest.gd" type="Script" id=1]
[ext_resource path="res://assets/graphic/sprites/player/adventurer-v1.5-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/graphic/sprites/particles/Fogo_propuncao.png" type="Texture" id=3]
[ext_resource path="res://entites/PlayerStateMachine.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/Sword1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/double_jump1.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( -0.131714, -1.1324, 350.803, 595.849 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.51336
height = 20.8813

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.222222, 0.933333, 1 )
colors = PoolColorArray( 1, 0.839216, 0.105882, 1, 0.952941, 0.537255, 0.0941176, 1, 1, 0.230017, 0.0313725, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, -120, 0 )
initial_velocity = 50.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "air_atk"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 96, 97, 98 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sounds/Sword1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sounds/Sword1:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "atk1"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sounds/Sword1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "dash"
length = 0.55
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DoubleJumpParticle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DoubleJumpParticle2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sounds/DoubleJump1:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "fall"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=11]
resource_name = "grab_wall"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 79, 80 ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=14]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84 ]
}

[sub_resource type="Animation" id=15]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[node name="PlayerTest" type="KinematicBody2D"]
position = Vector2( 0.094471, 0 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )
vframes = 16
hframes = 7
frame = 18

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( 0.120441, 3.59325 )
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
offset = Vector2( 0, -40 )
current = true
process_mode = 0

[node name="ColissionWall" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 7 )

[node name="DoubleJumpParticle" type="Particles2D" parent="."]
position = Vector2( 4.42004, 17.3101 )
rotation = 1.5708
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
speed_scale = 1.5
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="DoubleJumpParticle2" type="Particles2D" parent="."]
position = Vector2( -4.85854, 17.188 )
rotation = 1.5708
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
speed_scale = 1.5
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/air_atk = SubResource( 6 )
anims/atk1 = SubResource( 7 )
anims/dash = SubResource( 8 )
anims/double_jump = SubResource( 9 )
anims/fall = SubResource( 10 )
anims/grab_wall = SubResource( 11 )
anims/idle = SubResource( 12 )
anims/jump = SubResource( 13 )
anims/ladder = SubResource( 14 )
anims/take_damage = SubResource( 15 )
anims/walk = SubResource( 16 )

[node name="Times" type="Node" parent="."]

[node name="DashDelay" type="Timer" parent="Times"]
wait_time = 0.8
one_shot = true

[node name="AtkTime" type="Timer" parent="Times"]
wait_time = 0.35
one_shot = true

[node name="DashTime" type="Timer" parent="Times"]
wait_time = 0.4
one_shot = true

[node name="DelayAfterDamageTime" type="Timer" parent="Times"]
one_shot = true

[node name="AirAtkTime" type="Timer" parent="Times"]
wait_time = 0.4
one_shot = true

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Sounds" type="Node" parent="."]

[node name="Sword1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="DoubleJump1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
[connection signal="timeout" from="Times/DashDelay" to="PlayerStateMachine" method="_on_DashDelay_timeout"]
[connection signal="timeout" from="Times/AtkTime" to="PlayerStateMachine" method="_on_AtkTime_timeout"]
[connection signal="timeout" from="Times/DashTime" to="PlayerStateMachine" method="_on_DashTime_timeout"]
[connection signal="timeout" from="Times/AirAtkTime" to="PlayerStateMachine" method="_on_AirAtkTime_timeout"]
